# LegendsOfCodeAndMagic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  createOutput.sh
include/: CardDeck.hpp  Decision.hpp  GameController.hpp  Logger.hpp  Player.hpp
src/: CMakeLists.txt  CardDeck.cpp  Decision.cpp  GameController.cpp  Logger.cpp  Player.cpp  main.cpp
tests/: CMakeLists.txt  CardDeckTests.cpp  DecisionTests.cpp  LoggerTests.cpp  PlayerTests.cpp  main.cpp
